<resources>
    <string name="app_name">CompuStore V1.0</string>
    <string name="tag_ordenes">Órdenes</string>
    <string name="tag_productos">Productos</string>
    <string name="tag_categorias">Categorías</string>
    <string name="tag_cat2">Categorías: </string>
    <string name="tag_ensambles">Ensambles</string>
    <string name="tag_clientes">Clientes</string>
    <string name="tag_reportes">Reportes</string>
    <string name="tag_agregar">Agregar</string>
    <string name="tag_mod_orden">Modificar orden</string>
    <string name="tag_add_orden">Agregar orden</string>
    <string name="tag_mod_ass">Modificar ensamble</string>
    <string name="tag_add_ass">Agregar ensamle</string>
    <string name="tag_mod_client">Modificar cliente</string>

    <string name="tag_busqueda">Búsqueda por texto</string>
    <string name="tag_description">Descripción: </string>
    <string name="tag_precio">Precio: </string>
    <string name="tag_cantidad">Cantidad: </string>
    <string name="tag_faltantes">Productos faltantes</string>
    <string name="tag_orderconfirmation">Confirmación de órdenes</string>
    <string name="tag_resumenventas">Resumen de ventas</string>
    <string name="tag_id">ID: </string>
    <string name="tag_caregoriaID">Categoría: </string>
    <string name="tag_qty">Cantidad: </string>
    <string name="tag_nombre">Nombre: </string>
    <string name="tag_apellido">Apellido: </string>
    <string name="tag_direccion">Dirección: </string>
    <string name="tag_telefono">Teléfono 1: </string>
    <string name="tag_telefono2">Teléfono 2: </string>
    <string name="tag_telefono3">Teléfono 3: </string>
    <string name="tag_email">E-mail: </string>
    <string name="tag_fechafinal">Fecha  final: </string>
    <string name="tag_fechainicial">Fecha inicial:</string>
    <string name="tag_estado">Estado: </string>
    <string name="tag_clientID">ID Cliente: </string>
    <string name="tag_fecha">Fecha: </string>
    <string name="tag_cambios">Registro de cambios: </string>
    <string name="dialog_addp">Agregar Producto</string>
    <string name="tag_ProductID">ID Producto:</string>
    <string name="proc_por_client">Procesar por cliente: </string>
    <string name="proc_por_date">Procesar por fecha: </string>
    <string name="proc_por_monto">Procesar por monto de venta: </string>

    <string name="order_pendiente">Pendiente: </string>
    <string name="order_cancelado">Cancelado: </string>
    <string name="order_confirmado">Cofirmado: </string>
    <string name="order_entransito">En tránsito: </string>
    <string name="order_finalizado">Finalizado:</string>


    <string name="title_AddProducto">Nuevo Producto</string>
    <string name="title_NewClient">Cliente nuevo</string>
    <string name="title_ModProducto">Modificar Producto</string>
    <string name="title_EliminarProducto">Eliminar Producto</string>
    <string name="stock">Agregar stock </string>
    <string name="InvalidProduct">Texto vacío o Producto Existente</string>

    <string name="new_client">Nombre de cliente nuevo: </string>
    <string name="InvalidClient">Cliente inválido</string>

    <string name="Agrega_categoria">Nombre de categoría nueva</string>
    <string name="Edita_categoria">Editar categoría</string>
    <string name="Elimina_categoria">Eliminar categoría</string>
    <string name="edit_category">Editar categoría</string>
    <string name="delete_category">Eliminar categoría</string>
    <string name="new_category">Nombre de categoría nueva: </string>

    <string name="Edita_ensamble">Editar ensamble</string>
    <string name="Elimina_ensamble">Eliminar ensamble</string>
    <string name="Agrega_ensamble">Nombre de ensamble nuevo</string>
    <string name="InvalidAssembly">Texto vacío o Ensamble Existente</string>
    <string name="EnsambleAdd">Ensamble agregado correctamente</string>
    <string name="EnsambleMod">Ensamble modificado correctamente</string>


    <string name="Confirma_operacion">Se ha realizado exitosamente </string>
    <string name="Error_operacion">No se ha completado la operación</string>

    <string name="mes_ene">Enero</string>
    <string name="mes_feb">Febrero</string>
    <string name="mes_mar">Marzo</string>
    <string name="mes_ab">Abril</string>
    <string name="mes_may">Mayo</string>
    <string name="mes_jun">Junio</string>
    <string name="mes_jul">Julio</string>
    <string name="mes_ago">Agosto</string>
    <string name="mes_sep">Septiembre</string>
    <string name="mes_oct">Octubre</string>
    <string name="mes_nov">Noviembre</string>
    <string name="mes_dic">Diciembre</string>
    <string name="total_tag">Total: </string>

    <string name="texto_guardar">Guardar</string>
    <string name="texto_cancelar">Cancelar</string>
    <string name="texto_modificar">Modificar</string>
    <string name="texto_eliminar">Eliminar</string>
    <string name="texto_modificar_estado">Modificar estado</string>
    <string name="texto_modificar_orden">Modificar orden</string>
    <string name="texto_regresar_estado">Regresar estado a...</string>
    <string name="texto_avanzar_estado">Avanzar estado a...</string>
    <string name="sure_text">¿Seguro?</string>


</resources>
