<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/proc_client_tag"
        android:text="@string/proc_por_client"
        android:textSize="18dp"
        />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/proc_date_tag"
        android:text="@string/proc_por_date"
        android:textSize="18dp"
        />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/proc_monto_tag"
        android:text="@string/proc_por_monto"
        android:textSize="18dp"
        />
<android.support.v7.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rv_confirm_ord"
        >
</android.support.v7.widget.RecyclerView>
</LinearLayout>