<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:listSeparatorTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/idCl_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/tag_id"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idCl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/idCl_tag"
        android:text="@string/tag_caregoriaID"
        android:textSize="18sp"
        tools:text="...ID.." />

    <TextView
        android:id="@+id/nombreCl_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/idCl_tag"
        android:text="@string/tag_nombre"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nombreCl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idCl_tag"
        android:layout_toEndOf="@id/nombreCl_tag"
        android:text="@string/tag_caregoriaID"
        android:textSize="18sp"
        tools:text="...Nombre.." />

    <TextView
        android:id="@+id/apellidoCl_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/nombreCl_tag"
        android:text="@string/tag_apellido"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/apellidoCl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombreCl_tag"
        android:layout_toEndOf="@id/apellidoCl_tag"
        android:text="@string/tag_apellido"
        android:textSize="18sp"
        tools:text="...Apellido.." />

    <TextView
        android:id="@+id/direc_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/apellidoCl_text"
        android:text="@string/tag_direccion"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/direc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellidoCl_text"
        android:layout_toEndOf="@id/direc_tag"
        android:text="@string/tag_direccion"
        android:textSize="18sp"
        tools:text="...Dirección.." />

    <TextView
        android:id="@+id/tel1_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/direc_text"
        android:text="@string/tag_telefono"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tel1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/direc_text"
        android:layout_toEndOf="@id/tel1_tag"
        android:text="@string/tag_telefono"
        android:textSize="18sp"
        tools:text="...Teléfono.." />
    <TextView
        android:id="@+id/tel2_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tel1_tag"
        android:text="@string/tag_telefono2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tel2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel1_tag"
        android:layout_toEndOf="@id/tel2_tag"
        android:text="@string/tag_telefono2"
        android:textSize="18sp"
        tools:text="...Teléfono 2.." />

    <TextView
        android:id="@+id/tel3_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tel2_tag"
        android:text="@string/tag_telefono3"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tel3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel2_tag"
        android:layout_toEndOf="@id/tel3_tag"
        android:text="@string/tag_telefono"
        android:textSize="18sp"
        tools:text="...Telefono 3.." />
    <TextView
        android:id="@+id/email_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tel3_tag"
        android:text="@string/tag_email"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel3_tag"
        android:layout_toEndOf="@id/email_tag"
        android:text="@string/tag_email"
        android:textSize="18sp"
        tools:text="...E-mail.." />

</RelativeLayout>