<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:listSeparatorTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/id_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/tag_id"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/id_tag"
        android:text="@string/tag_caregoriaID"
        android:textSize="18sp"
        tools:text="...ID.." />

    <TextView
        android:id="@+id/categoryID_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/id_tag"
        android:text="@string/tag_caregoriaID"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/categoryID_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_tag"
        android:layout_toEndOf="@id/categoryID_tag"
        android:text="@string/tag_caregoriaID"
        android:textSize="18sp"
        tools:text="...Categoría.." />

    <TextView
        android:id="@+id/description_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/categoryID_tag"
        android:text="@string/tag_description"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryID_tag"
        android:layout_toEndOf="@id/description_tag"
        android:text="@string/tag_description"
        android:textSize="18sp"
        tools:text="...Descripción.." />

    <TextView
        android:id="@+id/price_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/description_text"
        android:text="@string/tag_precio"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_text"
        android:layout_toEndOf="@id/price_tag"
        android:text="@string/tag_precio"
        android:textSize="18sp"
        tools:text="...Precio.." />

    <TextView
        android:id="@+id/qty_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/price_tag"
        android:text="@string/tag_cantidad"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/qty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_tag"
        android:layout_toEndOf="@id/qty_tag"
        android:text="@string/tag_qty"
        android:textSize="18sp"
        tools:text="...Cantidad.." />


</RelativeLayout>