<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:listSeparatorTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/id_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/tag_id"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/id_tag"
        android:text="@string/tag_caregoriaID"
        android:textSize="18sp"
        tools:text="...ID.."/>
    <TextView
        android:id="@+id/description_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/id_tag"
        android:text="@string/tag_description"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/description_tag"
        android:layout_below="@id/id_text"
        android:text="@string/tag_description"
        android:textSize="18sp"
        tools:text="...Descripción.."/>
</RelativeLayout>