<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/title_AddProducto"
        android:id="@+id/title_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/category_tag"
        android:text="@string/tag_cat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_product"
        android:padding="10dp"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/description_tag"
        android:text="@string/tag_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_tag"
        android:padding="10dp"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/precio_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_tag"
        android:padding="10sp"
        android:textSize="24sp"
        android:text="@string/tag_precio"/>

    <Spinner
        android:id="@+id/spinnerPr"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:layout_below="@id/title_product"
        android:layout_toEndOf="@id/category_tag"
        android:layout_above="@id/description_tag"/>

    <EditText
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_tag"
        android:layout_toEndOf="@id/description_tag"
        android:inputType="text"
        tool:ignore="LabelFor" />

    <EditText
        android:id="@+id/precio_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_tag"
        android:layout_toEndOf="@id/precio_tag"
        android:inputType="number"
        android:hint="Precio en centavos"
        tool:ignore="LabelFor" />


</RelativeLayout>