<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/title_NewClient"
        android:id="@+id/title_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/nombreCln_tag"
        android:text="@string/tag_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_client"
        android:padding="10dp"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/apellidoCln_tag"
        android:text="@string/tag_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombreCln_tag"
        android:padding="10dp"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/direcCln_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellidoCln_tag"
        android:text="@string/tag_direccion"
        android:padding="10sp"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/telCln_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/direcCln_tag"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/tag_telefono"/>
    <TextView
        android:id="@+id/tel2Cln_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/telCln_tag"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/tag_telefono2"/>
    <TextView
        android:id="@+id/tel3Cln_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel2Cln_tag"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/tag_telefono3"/>
    <TextView
        android:id="@+id/emailCln_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel3Cln_tag"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/tag_email"/>
    <EditText
        android:id="@+id/nombreCln_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_client"
        android:layout_toEndOf="@id/nombreCln_tag"
        android:inputType="text"
        tool:ignore="LabelFor" />

    <EditText
        android:id="@+id/apellidoCln_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombreCln_tag"
        android:layout_toEndOf="@id/apellidoCln_tag"
        android:inputType="text"
        tool:ignore="LabelFor" />

    <EditText
        android:id="@+id/direcCln_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellidoCln_tag"
        android:layout_toEndOf="@id/direcCln_tag"
        android:inputType="text"
        tool:ignore="LabelFor" />

    <EditText
        android:id="@+id/ladat1_text"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/direcCln_tag"
        android:layout_toEndOf="@id/telCln_tag"
        android:inputType="number"
        android:hint="(Lada)"
        android:maxLength="3"
        android:textAlignment="center"
        tool:ignore="HardcodedText,LabelFor" />

    <EditText
        android:id="@+id/phonet1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/direcCln_tag"
        android:layout_toEndOf="@id/ladat1_text"
        android:inputType="phone"
        android:hint="(phone)"
        android:maxLength="7"
        android:textAlignment="center"
        tool:ignore="HardcodedText,LabelFor" />
    <EditText
        android:id="@+id/ladat2_text"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/telCln_tag"
        android:layout_toEndOf="@id/tel2Cln_tag"
        android:inputType="number"
        android:textAlignment="center"
        android:hint="(Lada)"
        android:maxLength="3"
        tool:ignore="HardcodedText,LabelFor" />

    <EditText
        android:id="@+id/phonet2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telCln_tag"
        android:layout_toEndOf="@id/ladat2_text"
        android:inputType="phone"
        android:hint="(phone)"
        android:maxLength="7"
        android:textAlignment="center"
        tool:ignore="HardcodedText,LabelFor" />
    <EditText
        android:id="@+id/ladat3_text"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel2Cln_tag"
        android:layout_toEndOf="@id/tel3Cln_tag"
        android:inputType="number"
        android:hint="(Lada)"
        android:maxLength="3"
        android:textAlignment="center"
        tool:ignore="HardcodedText,LabelFor" />

    <EditText
        android:id="@+id/phonet3_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel2Cln_tag"
        android:layout_toEndOf="@id/ladat3_text"
        android:inputType="phone"
        android:hint="(phone)"
        android:maxLength="7"
        android:textAlignment="center"
        tool:ignore="HardcodedText,LabelFor" />
    <EditText
        android:id="@+id/emailCln_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel3Cln_tag"
        android:layout_toEndOf="@id/emailCln_tag"
        android:inputType="textEmailAddress"
        tool:ignore="LabelFor" />

</RelativeLayout>